# griptape-nodes-sam-3d-objects-library

./: .gitignore  .gitmodules  Makefile  README.md  griptape-nodes-library.json  pyproject.toml
.claude/skills/new-os-model-library/: SKILL.md
.claude/skills/os-model-library-setup/: SKILL.md
.claude/skills/os-model-node-impl/: SKILL.md
.claude/skills/os-model-research/: SKILL.md
example_nodes_template/: simple_drawing_canvas_node.py
example_nodes_template/widgets/: SimpleDrawingCanvas.js
griptape_nodes_sam_3d_objects_library/: __init__.py  _subprocess_inference.py  griptape-nodes-library.json  reconstruct_multi_object_3d.py  reconstruct_single_object_3d.py  sam_3d_objects_library_advanced.py
